--- a/spring/src/main/webapp/resources/css/global.css
+++ b/spring/src/main/webapp/resources/css/global.css
@@ -139,3 +139,14 @@
 	font-size: 24px;
 	border: none;
 }
+.dup-suc-msg, .dup-fail-msg{
+	color: red;
+	line-height: 16px;
+	margin-bottom: 10px;
+}
+.dup-suc-msg{
+	color: green;
+}
+.display-none{
+	display: none;
+}
