회원가입(제약조건O, 암호화O)

--- a/portfolio/src/main/webapp/resources/css/tilesSet.css
+++ b/portfolio/src/main/webapp/resources/css/tilesSet.css
@@ -192,9 +192,11 @@ a:hover{
 }
 .user-set-goodsList-page{
 	cursor: default;
+	line-height: 36px;
 }
 .user-set-goodsList-pageButton{
 	cursor: pointer;
+	margin-top: 5px;
 }
 .user-set-goTop{
 	height: 60px;
