--- a/portfolio/src/main/webapp/resources/css/goodsList.css
+++ b/portfolio/src/main/webapp/resources/css/goodsList.css
@@ -1,13 +1,5 @@
 @charset "UTF-8";
-*{
-	margin: 0;
-	padding: 0;
-}
-a{
-	text-decoration: none;
-	color: black;
-}
-a:hover{
+.common-goodsList-box>a:hover{
 	text-decoration: none;
 	color: black;
 }
