--- a/portfolio/src/main/webapp/resources/css/userMain.css
+++ b/portfolio/src/main/webapp/resources/css/userMain.css
@@ -1,12 +1,4 @@
 @charset "UTF-8";
-*{
-	margin: 0;
-	padding: 0;
-}
-a{
-	text-decoration: none;
-	color: black;
-}
 .user-main-box{
 	width: 1400px;
 	padding: 100px 0 50px 0;
@@ -85,4 +77,7 @@ a{
 	clear: both;
 	content: '';
 	display: block;
+}
+.carousel-indicators{
+	z-index: 1;
 }
