--- a/portfolio/src/main/webapp/resources/css/goodsView.css
+++ b/portfolio/src/main/webapp/resources/css/goodsView.css
@@ -14,7 +14,7 @@
 	padding: 30px 0 20px 100px;
 	box-sizing: border-box;
 	position: relative;
-      }
+}
 .common-goodsView-leftBox{
 	float: left;
 }
@@ -73,7 +73,7 @@
 	box-sizing: border-box;
 	border: 1px solid black;
 	background-color: white;
-      }
+}
 .common-goodsView-goodsPrice, .common-goodsView-goodsPayPoint, .common-goodsView-goodsColor, .common-goodsView-goodsStock, .common-goodsView-goodsDiscount, .common-goodsView-goodsDiscountPrice{
 	position: absolute;
 	width: 100px;
@@ -219,7 +219,7 @@
 	background-color: cornsilk;
 }
 .common-goodsView-selectAllPrice{
-	width: 400px;
+	width: 300px;
 	height: 108px;
 	background-color: white;
 	text-align: right;
@@ -228,20 +228,26 @@
 	line-height: 108px;
 	box-sizing: border-box;
 }
-.common-goodsView-goCart, .common-goodsView-goBuy{
+.common-goodsView-goCart, .common-goodsView-goodsWishList ,.common-goodsView-goBuy{
+	border: none;
 	position: absolute;
 	top: 0;
-	left: 400px;
+	left: 300px;
 	width: 98px;
 	background-color: bisque;
 	text-align: center;
-	font-size: 20px;
+	font-size: 15px;
 	line-height: 54px;
 	border-left: 1px solid black;
 	box-sizing: border-box;
 	cursor: pointer;
 }
+.common-goodsView-goodsWishList{
+	left: 400px;
+}
 .common-goodsView-goBuy{
+	font-size: 20px;
+	width: 198px;
 	top: 53px;
 	border-top: 1px solid black;
 }
@@ -263,7 +269,6 @@
 	height: 98px;
 	line-height: 90px;
 	text-align: center;
-	cursor: pointer;
 }
 .common-goodsView-goodsExplainMenuBox>*:nth-of-type(2), .common-goodsView-deliveryExplainMenuBox>*:nth-of-type(2){
 	box-sizing: border-box;
@@ -285,4 +290,57 @@
 .common-goodsView-deliveryExplainImg{
 	width: 1000px;
 	height: 500px;
+}
+.common-goodsView-adminBox{
+	width: 500px;
+	height: 270px;
+	background-color: aliceblue;
+	position: relative;			
+}
+.common-goodsView-adminStockBox{
+	width: 500px;
+	height: 200px;
+	background-color: burlywood;
+	position: relative;
+}
+.common-goodsView-adminStockLine ,.common-goodsView-adminColorName, .common-goodsView-adminStockTitle, .commongoodsView-admin-Stock{
+	width: 150px;
+	height: 48px;
+	background-color: blanchedalmond;
+	float: left;
+	font-size: 20px;
+	text-align: center;
+	line-height: 48px;
+	box-sizing: border-box;
+}
+.common-goodsView-adminStockLine{
+	width: 482px;
+	height: 50px;
+	box-sizing: border-box;
+	border: 1px solid black;
+	box-sizing: border-box;
+}
+.common-goodsView-adminStockLine + .common-goodsView-adminStockLine{
+	border-top: none
+}
+.common-goodsView-adminStockLine>div+div{
+	border-left: 1px solid black;
+}
+.commongoodsView-admin-Stock{
+	width: 180px;
+}
+.common-goodsView-modifyButton{
+	margin-top: 10px;
+	width: 150px;
+	height: 60px;
+	background-color: grey;
+	float: right;
+	font-size: 20px;
+	text-align: center;
+	box-sizing: border-box;
+	border: 1px solid black;
+	line-height: 58px;
+}
+.common-goodsView-modifyButton + .common-goodsView-modifyButton{
+	border-right: none;
 }
