--- a/portfolio/src/main/webapp/resources/css/tilesSet.css
+++ b/portfolio/src/main/webapp/resources/css/tilesSet.css
@@ -54,12 +54,13 @@ a:hover{
 }
 .user-set-topMenuBox > *{
 	height: 30px;
-	width: 120px;
-	font-size: 20px;
+	width: 100px;
+	font-size: 15px;
 	margin:0 10px;
 	background-color: cornsilk;
 	text-align: center;
 	float: left;
+	line-height: 30px;
 }
 .user-set-logInButton, .user-set-signUpButton{
 	float: right;
@@ -70,6 +71,7 @@ a:hover{
 .user-set-logInInfo{
 	float: right;
 	width: 300px;
+	font-size: 20px;
 }
 .user-set-bottomMenuBox{
 	height: 100px;
