위시리스트쪽 DB연동 확인해야함

--- a/portfolio/src/main/webapp/resources/css/goodsWishList.css
+++ b/portfolio/src/main/webapp/resources/css/goodsWishList.css
@@ -27,15 +27,19 @@
 }
 .user-cart-goodsImgTitle{
 	width: 10%;
+	text-align: center;
 }
 .user-cart-goodsInfoTitle{
 	width: 50%;
+	text-align: center;
 }
 .user-cart-goodsPriceTitle{
 	width: 20%;
+	text-align: center;
 }
 .user-cart-goodsCountTitle{
 	width: 15%;
+	text-align: center;
 }
 .user-cart-goodsImg>img{
 	margin: 5px;
