--- a/portfolio/src/main/webapp/resources/css/goodsView.css
+++ b/portfolio/src/main/webapp/resources/css/goodsView.css
@@ -269,6 +269,7 @@
 	height: 98px;
 	line-height: 90px;
 	text-align: center;
+	cursor: pointer;
 }
 .common-goodsView-goodsExplainMenuBox>*:nth-of-type(2), .common-goodsView-deliveryExplainMenuBox>*:nth-of-type(2){
 	box-sizing: border-box;
