--- a/portfolio/src/main/webapp/resources/css/orderView.css
+++ b/portfolio/src/main/webapp/resources/css/orderView.css
@@ -114,10 +114,11 @@
 .user-orderView-Info td{
 	background-color: whitesmoke;
 	height: 30px;
+	width: 75%;
 }
 .user-orderView-Info td:nth-child(odd){
 	background-color: cornsilk;
-	padding-left: 10px;
+	text-align: center;
 	width: 25%;
 }
 .user-orderView-addressLine>div{
@@ -130,19 +131,14 @@
 .user-orderView-postcodeBox{
 	width: 200px;
 }
-.user-orderView-addressBox{
+.user-orderView-addressBox, .user-orderView-detailAddressBox, .user-orderView-extraAddressBox{
 	width: 520px;
 }
-.user-orderView-detailAddressBox, .user-orderView-extraAddressBox{
-	width: 300px;
-}
-.user-orderView-tel{
-	width: 50px;
-}
+
 .user-orderView-addressLineTitle{
 	position: absolute;
 	width: 100px;
-	height: 30px;
+	height: 28px;
 	text-align: center;
 	font-size: 20px;
 	line-height: 30px;
@@ -158,13 +154,8 @@
 	text-align: center;
 	box-sizing: border-box;
 }
-.user-orderView-address{
+.user-orderView-address, .user-orderView-detailAddress, .user-orderView-extraAddress{
 	width: 420px;
-	text-align: left;
-	padding-left: 10px;
-}
-.user-orderView-detailAddress, .user-orderView-extraAddress{
-	width: 200px;
 	text-align: left;
 	padding-left: 10px;
 }
@@ -199,4 +190,7 @@
 	line-height: 50px;
 	text-align: right;
 	padding-right: 20px;
+}
+.user-orderView-people{
+	padding-left: 10px;
 }
