--- a/portfolio/src/main/webapp/resources/css/adminGoodsAdd.css
+++ b/portfolio/src/main/webapp/resources/css/adminGoodsAdd.css
@@ -128,7 +128,7 @@ button{
 	text-align: center;
 	left: 450px;
 }
-.admin-goodsAdd-button{
+.admin-goodsAdd-button, .admin-goodsModify-button{
 	width: 100px;
 	height: 50px;
 	font-size: 20px;
