제품 삭제 완료(관리자 주문조회리스트페이지와 주문조회 페이지 구현해야함 리스트의 경우 c:if문으로 a태그 경로 다르게 하면됨)

--- a/portfolio/src/main/webapp/resources/css/goodsView.css
+++ b/portfolio/src/main/webapp/resources/css/goodsView.css
@@ -341,6 +341,7 @@
 	box-sizing: border-box;
 	border: 1px solid black;
 	line-height: 58px;
+	cursor: pointer;
 }
 .common-goodsView-modifyButton + .common-goodsView-modifyButton{
 	border-right: none;
