--- a/portfolio/src/main/webapp/resources/css/recallApply.css
+++ b/portfolio/src/main/webapp/resources/css/recallApply.css
@@ -3,6 +3,7 @@
 	width: 1400px;
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
+	margin-top: 100px;
 	background-color: palegoldenrod;
 	box-sizing: border-box;
 }
