반품신청페이지 데이터 전송 성공(반품내용 이외에 예외처리 하고 사유, 교환여부 데이터 전송 해야함)

--- a/portfolio/src/main/webapp/resources/css/recallApply.css
+++ b/portfolio/src/main/webapp/resources/css/recallApply.css
@@ -95,7 +95,7 @@
 	position: relative;
 }
 .user-recallApply-selectGoodsBox{
-	width: 700px;
+	width: 600px;
 	height: 50px;
 	margin-top: 20px;
 	background-color: lightcyan;
@@ -113,7 +113,7 @@
 	float: left;
 }
 .user-recallApply-selectGoods{
-	width: 488px;
+	width: 388px;
 	height: 50px;
 	margin-left: 10px;
 	font-size: 15px;
@@ -126,7 +126,15 @@
 	height: 50px;
 	font-size: 20px;
 	top: 0;
-	left: 720px;
+	left: 620px;
+}
+.user-recallApply-recallChange{
+	position: absolute;
+	width: 160px;
+	height: 50px;
+	font-size: 20px;
+	top: 0;
+	left: 800px;
 }
 .user-recallApply-board{
 	margin-top: 10px;
