--- a/portfolio/src/main/webapp/resources/css/recallView.css
+++ b/portfolio/src/main/webapp/resources/css/recallView.css
@@ -81,7 +81,7 @@
 	position: relative;
 }
 .user_recallView-selectGoodsBox{
-	width: 700px;
+	width: 400px;
 	height: 50px;
 	margin-top: 20px;
 	background-color: lightcyan;
@@ -92,17 +92,18 @@
 	width: 200px;
 	height: 50px;
 	text-align: center;
-	font-size: 25px;
+	font-size: 20px;
 	line-height: 50px;
 	box-sizing: border-box;
 	border-right: 1px solid black;
 	float: left;
 }
 .user_recallView-selectGoods{
-	width: 488px;
+	width: 188px;
 	height: 50px;
 	margin-left: 10px;
-	font-size: 15px;
+	text-align: center;
+	font-size: 20px;
 	line-height: 50px;
 	float: left;
 }
@@ -112,7 +113,7 @@
 	height: 50px;
 	font-size: 20px;
 	top: 0;
-	left: 720px;
+	left: 420px;
 	border: 1px solid black;
 	box-sizing: border-box;
 	background-color: white;
@@ -121,11 +122,12 @@
 }
 .user_recallView-recallReason{
 	position: absolute;
-	width: 160px;
+	width: 180px;
 	height: 50px;
 	font-size: 20px;
+	text-align: center;
 	top: 0;
-	left: 820px;
+	left: 520px;
 	border: 1px solid black;
 	box-sizing: border-box;
 	background-color: white;
@@ -137,11 +139,13 @@
 	border: 1px solid black;
 	box-sizing: border-box;
 	background-color: white;
-	padding: 20px;
 }
 .user_recallView-recallStateBox{
 	margin-top: 10px;
 	width: 400px;
+}
+.user_recallView-recallStateBox>div+div{
+	border-left: none;
 }
 .user_recallView-button{
 	margin-top: 10px;
