--- a/portfolio/src/main/webapp/resources/css/asView.css
+++ b/portfolio/src/main/webapp/resources/css/asView.css
@@ -68,7 +68,7 @@
 	position: relative;
 }
 .admin-recallView-board{
-	margin: 10px 0 0 100px;
+	margin: 10px 0 20px 100px;
 	width: 1000px;
 	border: 1px solid black;
 	box-sizing: border-box;
@@ -86,6 +86,8 @@
 	width: 200px;
 	height: 50px;
 	font-size: 25px;
+}
+.admin-asView-memberGoList{
 	margin-left: calc(50% - 100px);
 }
 .admin-asView-goList{
