--- a/portfolio/src/main/webapp/resources/css/noticeList.css
+++ b/portfolio/src/main/webapp/resources/css/noticeList.css
@@ -61,7 +61,6 @@ a, a:hover{
 	background-color: aqua;
 }
 .common-boardList-searchAndButtonBox{
-	width: 300px;
 	height: 30px;
 	background-color: azure;
 }
@@ -85,4 +84,18 @@ a, a:hover{
 	right: 0;
 	height: 30px;
 	width: 80px;
+}
+.common-boardWrite-isOpen{
+	width: 263px;
+	height: 45px;
+	background-color: white;
+	border-right: 1px solid black;
+	box-sizing: border-box;
+	padding: 10px 40px;
+}
+.common-boardWrite-isOpenButton{
+	margin: 0 10px;
+}
+.common-boardWrite-isOpen label{
+	font-size: 20px;
 }
