--- a/portfolio/src/main/webapp/resources/css/noticeList.css
+++ b/portfolio/src/main/webapp/resources/css/noticeList.css
@@ -99,3 +99,47 @@ a, a:hover{
 .common-boardWrite-isOpen label{
 	font-size: 20px;
 }
+.common-board-pause{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 50%);
+	z-index: 100;
+}
+.common-board-pauseBox{
+	margin: 0 auto;
+	margin-top: calc(50vh - 300px);
+	width: 600px;
+	height: 300px;
+	background-color: lightyellow;
+	position: relative;
+}
+.common-board-pauseBox>*{
+	position: relative;
+	width: 100%;
+	height: calc(100% / 3);
+}
+.common-board-pauseTitle{
+	font-size: 30px;
+	text-align: center;
+	line-height: 100px;
+}
+.common-board-pauseColse{
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	top: 10px;
+	right: 10px;
+}
+.common-board-pauseColseImg{
+	position: absolute;
+	top: 8px;
+	right: 12px;
+}
+.common-board-pausePassWord{
+	margin-left: calc(50% - 150px);
+	width: 300px;
+	height: 50px;
+}
