QA비밀글 비밀번호 확인하여 페이지 넘어가기 구현완료(QA조회페이지부터 시작하면됨)

--- a/portfolio/src/main/webapp/resources/css/noticeView.css
+++ b/portfolio/src/main/webapp/resources/css/noticeView.css
@@ -66,5 +66,8 @@
 	margin-left: 50px;
 }
 .common-boardView-goModify{
-	margin-left: 698px;
+	margin-left: 580px;
+}
+.common-boardView-goDelete{
+	margin-left: 10px;
 }
