--- a/portfolio/src/main/webapp/resources/css/noticeList.css
+++ b/portfolio/src/main/webapp/resources/css/noticeList.css
@@ -104,13 +104,13 @@ a, a:hover{
 	top: 0;
 	left: 0;
 	width: 100vw;
-	height: 100vh;
+	height: 200vh;
 	background-color: rgba(0, 0, 0, 50%);
 	z-index: 100;
 }
 .common-board-pauseBox{
 	margin: 0 auto;
-	margin-top: calc(50vh - 300px);
+	margin-top: calc(100vh - 300px);
 	width: 600px;
 	height: 300px;
 	background-color: lightyellow;
@@ -138,8 +138,10 @@ a, a:hover{
 	top: 8px;
 	right: 12px;
 }
-.common-board-pausePassWord{
+.common-board-pausePassWord, .common-board-pauseCheckButton{
 	margin-left: calc(50% - 150px);
 	width: 300px;
 	height: 50px;
+	box-sizing: border-box;
+	padding-left: 10px;
 }
