QA조회페이지 DB연동 완료(관리자 권한으로 답글 쓰는 것과 삭제하는 기능 추가해야함)

--- a/portfolio/src/main/webapp/resources/css/noticeList.css
+++ b/portfolio/src/main/webapp/resources/css/noticeList.css
@@ -99,6 +99,12 @@ a, a:hover{
 .common-boardWrite-isOpen label{
 	font-size: 20px;
 }
+.common-boardList-pauseOn{
+	cursor: default;
+}
+.common-boardList-pauseOn:hover{
+	cursor: pointer;
+}
 .common-board-pause{
 	position: absolute;
 	top: 0;
