--- a/portfolio/src/main/webapp/resources/css/userMain.css
+++ b/portfolio/src/main/webapp/resources/css/userMain.css
@@ -23,14 +23,16 @@
 	float: left;
 }
 .user-main-noticeTitle{
-	width: 310px;
+	width: 258px;
 	margin-right: 10px;
 	float: left;
+	font-size: 14px;
 }
 .user-main-noticeDate{
-	width: 100px;
+	width: 148px;
 	text-align: center;
 	float: left;
+	font-size: 14px;
 }
 .user-main-topContent{
 	width: 100%;
@@ -80,4 +82,7 @@
 }
 .carousel-indicators{
 	z-index: 1;
+}
+.user-main-noticeLine + .user-main-noticeLine{
+	border-top: none;
 }
