css 수정(마이페이지 화면추가부터 하면 됨)

--- a/portfolio/src/main/webapp/resources/css/goodsSearch.css
+++ b/portfolio/src/main/webapp/resources/css/goodsSearch.css
@@ -44,7 +44,7 @@
 span + .common-goodsSearch-option{
 	left: 500px;
 }
-.number{
+.common-goodSearch-optionSubBox .number{
 	width: 200px;
 }
 .common-goodSearch-optionSearchButton{
