헤더 li태그관련 수정(마이페이지 화면추가 부터 하면 됨)

--- a/portfolio/src/main/webapp/resources/css/tilesSet.css
+++ b/portfolio/src/main/webapp/resources/css/tilesSet.css
@@ -93,6 +93,7 @@ a:hover{
 }
 .user-set-listEarRing{
 	cursor: pointer;
+	list-style: none;
 }
 .user-set-listEarRing > *{
 	display: none;
@@ -104,6 +105,7 @@ a:hover{
 	text-align: center;
 	box-sizing: border-box;
 	border-top: black 1px solid;
+	list-style: none;
 }
 .user-set-searchBox{
 	width: 300px;
