--- a/portfolio/src/main/webapp/resources/css/adminGoodsAdd.css
+++ b/portfolio/src/main/webapp/resources/css/adminGoodsAdd.css
@@ -11,13 +11,13 @@ button{
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .admin-goodsAdd-goodsAddBox{
 	width: 1200px;
 	margin-left: 100px;
-	background-color: aquamarine;
+	background-color: rgb(255, 220, 220);
 	padding: 20px 0 20px 100px;
 	box-sizing: border-box;
 	position: relative;
@@ -40,7 +40,6 @@ button{
 	border: 1px solid black;
 	box-sizing: border-box;
 	font-size: 20px;
-	background-color: whitesmoke;
 	text-align: center;
 	line-height: 400px;
 	display: none;
@@ -64,7 +63,7 @@ button{
 	position: absolute;
 	width: 131px;
 	height: 50px;
-	background-color: antiquewhite;
+	background-color: rgb(255, 240, 240);
 	border: 1px solid black;
 	box-sizing: border-box;
 	font-size: 25px;
