--- a/portfolio/src/main/webapp/resources/css/goodsCart.css
+++ b/portfolio/src/main/webapp/resources/css/goodsCart.css
@@ -4,28 +4,31 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .user-cart-cartBox{
 	width: 1200px;
-	background-color: cornsilk;
+	background-color: rgb(255, 220, 220);
 	padding: 50px 0;
 	margin-left: 100px;
 }
 .user-cart-goodsBox{
 	width: 1000px;
-	background-color: cyan;
+	background-color: rgb(255, 250, 250);
 	margin-left: 100px;
 	margin-bottom: 30px;
 	border-collapse: collapse;
 	border-color: black;
 }
+.user-cart-goodsBox th{
+	background-color: rgb(255, 230, 230);
+}
 .user-cart-goodsCheck, .user-cart-goodsCheckAll{
 	cursor: pointer;
 	margin-left: 17px;
 }
-td{
+.user-cart-goodsBox td{
 	width: 5%;
 }
 .user-cart-goodsImgTitle{
@@ -86,7 +89,7 @@ td{
 .user-cart-totalPrice{
 	width: 500px;
 	height: 40px;
-	background-color: aquamarine;
+	background-color: rgb(255, 250, 250);
 	float: right;
 	margin-right: 10px;
 	border: 1px solid black;
