--- a/portfolio/src/main/webapp/resources/css/goodsList.css
+++ b/portfolio/src/main/webapp/resources/css/goodsList.css
@@ -8,7 +8,7 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .common-goodsList-goodsTitle{
@@ -19,34 +19,41 @@
 	margin: 0 auto;
 	width: 1320px;
 	height: auto;
-	background-color: cadetblue;
+	background-color: rgb(255, 220, 220)
 }
 .common-goodsList-goodsBox{
 	width: 300px;
 	height: 380px;
-	background-color: chartreuse;
 	float: left;
 	margin: 15px;
+	box-sizing: border-box;
+	border: 1px solid black;
 }
 .common-goodsList-goods{
 	width: 100%;
 	height: 300px;
-	background-color: cyan;
 }
 .common-goodsList-goodsInfo{
 	width: 100%;
 	height: 80px;
-	background-color: darkgray;
 }
 .common-goodsList-goodsName{
 	width: 100%;
-	height: 50px;
-	background-color: cornsilk;
+	height: 48px;
+	background-color: rgb(255, 200, 200);
+	line-height: 48px;
+	box-sizing: border-box;
+	padding-left: 10px;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
 }
 .common-goodsList-goodsPrice{
 	width: 100%;
 	height: 30px;
-	background-color: lightpink;
+	background-color: rgb(255, 210, 210);
+	line-height: 30px;
+	box-sizing: border-box;
+	padding-left: 10px;
 }
 .common-goodsList-pagination{
 	margin-top: 20px;
