--- a/portfolio/src/main/webapp/resources/css/goodsView.css
+++ b/portfolio/src/main/webapp/resources/css/goodsView.css
@@ -4,13 +4,13 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .common-goodsView-goodsAddBox{
 	width: 1200px;
 	margin-left: 100px;
-	background-color: aquamarine;
+	background-color: rgb(255, 220, 220);
 	padding: 30px 0 20px 100px;
 	box-sizing: border-box;
 	position: relative;
@@ -34,7 +34,6 @@
 	border: 1px solid black;
 	box-sizing: border-box;
 	font-size: 20px;
-	background-color: whitesmoke;
 	text-align: center;
 	line-height: 400px;
 }
@@ -55,7 +54,7 @@
 	position: absolute;
 	width: 101px;
 	height: 50px;
-	background-color: antiquewhite;
+	background-color: rgb(255, 240, 240);
 	border: 1px solid black;
 	box-sizing: border-box;
 	font-size: 25px;
@@ -85,7 +84,7 @@
 	box-sizing: border-box;
 	left: 100px;
 	border: 1px solid black;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 }
 .common-goodsView-goodsPayPointTitle, .common-goodsView-goodsStockTitle, .common-goodsView-goodsDiscountPriceTitle{
 	left: 225px;
@@ -120,7 +119,6 @@
 	position: relative;
 	width: 478px;
 	height: 50px;
-	background-color: cornflowerblue;
 	box-sizing: border-box;
 	border-top: 1px solid black;
 }
@@ -133,7 +131,7 @@
 .common-goodsView-optionName{
 	width: 150px;
 	height: 100%;
-	background-color: cornsilk;
+	background-color: rgb(255, 240, 240);
 	padding-left: 20px;
 	line-height: 50px;
 	font-size: 20px;
@@ -160,7 +158,7 @@
 	left: 250px;
 	width: 70px;
 	height: 100%;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	box-sizing: border-box;
 }
 .common-goodsView-optionCountButton{
@@ -182,7 +180,7 @@
 	left: 320px;
 	width: 110px;
 	height: 100%;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	padding-right: 10px;
 	text-align: right;
 	line-height: 50px;
@@ -195,14 +193,14 @@
 	left: 430px;
 	width: 48px;
 	height: 100%;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	border-right: 1px solid black;
 	box-sizing: border-box;
 }
 .common-goodsView-optionCancelButton{
 	width: 20px;
 	height: 20px;
-	background-color: gray;
+	background-color: rgb(128, 128, 128);
 	line-height: 20px;
 	text-align: center;
 	margin-top: 14px;
@@ -210,18 +208,17 @@
 	cursor: pointer;
 }
 .common-goodsView-optionCancelButton>i{
-	color: white;
+	color: rgb(255, 255, 255);
 }
 .common-goodsView-selectPriceBox{
 	width: 498px;
 	height: 108px;
 	position: relative;
-	background-color: cornsilk;
 }
 .common-goodsView-selectAllPrice{
 	width: 300px;
 	height: 108px;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	text-align: right;
 	padding-right: 20px;
 	font-size: 20px;
@@ -234,7 +231,7 @@
 	top: 0;
 	left: 300px;
 	width: 98px;
-	background-color: bisque;
+	background-color: rgb(255, 240, 240);
 	text-align: center;
 	font-size: 15px;
 	line-height: 54px;
@@ -261,7 +258,7 @@
 }
 .common-goodsView-goodsExplainMenuBox div, .common-goodsView-deliveryExplainMenuBox div{
 	position: absolute;
-	background-color: aliceblue;
+	background-color: rgb(255, 255, 255);
 	top: 0;
 	left: 0;
 	font-size: 30px;
@@ -277,8 +274,8 @@
 	left: 499px;
 }
 .common-goodsView-goodsExplainMenuBox>*:nth-of-type(1), .common-goodsView-deliveryExplainMenuBox>*:nth-of-type(2){
-	background-color: grey;
-	color: white;
+	background-color: rgb(255, 170, 170);
+	color: rgb(255, 255, 255);
 }
 #common-goodsView-goodsExplainMenuBox, #common-goodsView-deliveryExplainMenuBox{
 	position: absolute;
@@ -295,24 +292,26 @@
 .common-goodsView-adminBox{
 	width: 500px;
 	height: 270px;
-	background-color: aliceblue;
 	position: relative;			
 }
 .common-goodsView-adminStockBox{
 	width: 500px;
 	height: 200px;
-	background-color: burlywood;
+	background-color: rgb(255, 255, 255);
 	position: relative;
 }
 .common-goodsView-adminStockLine ,.common-goodsView-adminColorName, .common-goodsView-adminStockTitle, .commongoodsView-admin-Stock{
 	width: 150px;
 	height: 48px;
-	background-color: blanchedalmond;
+	background-color: rgb(255, 255, 255);
 	float: left;
 	font-size: 20px;
 	text-align: center;
 	line-height: 48px;
 	box-sizing: border-box;
+}
+.common-goodsView-adminColorName{
+	background-color: rgb(255, 240, 240);
 }
 .common-goodsView-adminStockLine{
 	width: 482px;
@@ -334,7 +333,7 @@
 	margin-top: 10px;
 	width: 150px;
 	height: 60px;
-	background-color: grey;
+	background-color: rgb(255, 240, 240);
 	float: right;
 	font-size: 20px;
 	text-align: center;
