--- a/portfolio/src/main/webapp/resources/css/myPage.css
+++ b/portfolio/src/main/webapp/resources/css/myPage.css
@@ -5,13 +5,13 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .user-mypage-mypageBox{
 	width: 1000px;
 	margin: 0 auto;
-	background-color: aqua;
+	background-color: rgb(255, 220, 220);
 	padding: 20px 50px;
 	box-sizing: border-box;
 	position: relative;
@@ -29,12 +29,12 @@
 	height: 40px;
 	font-size: 20px;
 	text-align: center;
-	background-color: lightpink;
+	background-color: rgb(255, 230, 230);
 }
 .user-mypage-rowContent{
 	width: 700px;
 	height: 40px;
-	background-color: ivory;
+	background-color: rgb(255, 250, 250);
 	padding-left: 10px;
 	box-sizing: border-box;
 }
