--- a/portfolio/src/main/webapp/resources/css/noticeList.css
+++ b/portfolio/src/main/webapp/resources/css/noticeList.css
@@ -7,34 +7,32 @@
 .common-boardList-table td{
 	font-size: 15px;
 }
-a, a:hover{
-	text-decoration: none;
-	color: black;
-}
 .common-boardList-box{
 	width: 1400px;
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .common-boardList-boardListBox{
 	width: 1200px;
 	margin-left: 100px;
 	padding: 20px 0 20px 0;
-	background-color: blanchedalmond;
 	box-sizing: border-box;
 }
 .common-boardList-title{
 	margin-left: 100px;
 	margin-bottom: 50px;
 }
-.common-boardList-table{
+.common-boardList-table {
 	margin-left: 100px;
 	width: 1000px;
-	background-color: aliceblue;
+	background-color: rgb(255, 230, 230);
 	margin-bottom: 10px;			
+}
+.common-boardList-table th{
+	background-color: rgb(255, 210, 210);
 }
 .common-boardList-boardNum{
 	width: 10%;
@@ -58,11 +56,9 @@ a, a:hover{
 	margin-left: 100px;
 	margin-bottom: 10px;
 	position: relative;
-	background-color: aqua;
 }
 .common-boardList-searchAndButtonBox{
 	height: 30px;
-	background-color: azure;
 }
 .common-boardList-searchType{
 	width: 90px;
@@ -119,7 +115,7 @@ a, a:hover{
 	margin-top: calc(100vh - 300px);
 	width: 600px;
 	height: 300px;
-	background-color: lightyellow;
+	background-color: rgb(255, 240, 240);
 	position: relative;
 }
 .common-board-pauseBox>*{
