--- a/portfolio/src/main/webapp/resources/css/noticeView.css
+++ b/portfolio/src/main/webapp/resources/css/noticeView.css
@@ -7,7 +7,7 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .common-boardView-ViewBox{
@@ -15,7 +15,7 @@
 	padding: 30px 0;
 	margin: 0 auto;
 	box-sizing: border-box;
-	background-color: aquamarine;
+	background-color: rgb(255, 220, 220);
 }
 .common-boardView-titleBox{
 	width: 900px;
@@ -26,13 +26,13 @@
 	border-collapse: collapse;
 }
 .common-boardView-rowTitle{
-	background-color: blanchedalmond;
+	background-color: rgb(255, 240, 240);
 	width: 30%;
 	text-align: center;
 	font-size: 20px;
 }
 .common-boardView-rowContent{
-	background-color: azure;
+	background-color: rgb(255, 255, 255);
 	font-size: 20px;
 	padding-left: 20px;
 	box-sizing: border-box;
@@ -40,19 +40,19 @@
 .common-boardView-menu{
 	width: 25%;
 	height: 45px;
-	background-color: blanchedalmond;
+	background-color: rgb(255, 240, 240);
 	text-align: center;
 	font-size: 20px;
 }
 .common-boardView-menu:nth-child(even){
-	background-color: azure;
+	background-color: rgb(255, 255, 255);
 }
 .common-boardView-content{
 	width: 900px;
 	height: auto;
 	padding: 20px;
 	margin-left: 50px;
-	background-color: azure;
+	background-color: rgb(255, 255, 255);
 	border: 1px solid black;
 	box-sizing: border-box;
 }
