--- a/portfolio/src/main/webapp/resources/css/recallApply.css
+++ b/portfolio/src/main/webapp/resources/css/recallApply.css
@@ -4,13 +4,12 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .user-recallApply-recallApplyBox{
 	width: 1200px;
 	margin-left: 100px;
-	background-color: lavender;
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
@@ -20,14 +19,18 @@
 .user-recallApply-recallApplyInfoBox{
 	width: 1000px;
 	margin-left: 100px;
-	background-color: lemonchiffon;
+	border: 1px solid black;
+	background-color: rgb(255, 220, 220);
 	padding: 10px
 }
 .user-recallApply-orderNumberBox{
 	width: 400px;
 	height: 50px;
+	background-color: rgb(255, 255, 255);
 	margin-bottom: 20px;
-	background-color: lightcyan;
+}
+.user-recallApply-orderNumberBox div:nth-child(odd){
+	background-color: rgb(255, 240, 240);
 }
 .user-recallApply-orderNumberBox>*{
 	display: inline-block;
@@ -44,9 +47,12 @@
 }
 .user-recallApply-goodsBox{
 	width: 960px;
-	background-color: cyan; 
+	background-color: rgb(255, 250, 250); 
 	border-collapse: collapse;
 	border-color: black;
+}
+.user-recallApply-goodsBox th{
+	background-color: rgb(255, 230, 230);
 }
 .user-recallApply-goodsCheck, .user-recallApply-goodsCheckAll{
 	cursor: pointer;
@@ -98,24 +104,24 @@
 	width: 600px;
 	height: 50px;
 	margin-top: 20px;
-	background-color: lightcyan;
 	box-sizing: border-box;
 	border: 1px solid black;
 }
 .user-recallApply-selectGoodsTitle{
-	width: 200px;
-	height: 50px;
+	width: 198px;
+	height: 48px;
 	text-align: center;
 	font-size: 25px;
+	background-color: rgb(255, 240, 240);
 	line-height: 50px;
 	box-sizing: border-box;
 	border-right: 1px solid black;
 	float: left;
 }
 .user-recallApply-selectGoods{
-	width: 388px;
-	height: 50px;
-	margin-left: 10px;
+	width: 400px;
+	height: 48px;
+	background-color: rgb(255, 255, 255);
 	font-size: 15px;
 	line-height: 50px;
 	float: left;
