--- a/portfolio/src/main/webapp/resources/css/recallSelect.css
+++ b/portfolio/src/main/webapp/resources/css/recallSelect.css
@@ -4,14 +4,13 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .user_recallSelect-recallSelectBox{
 	width: 1200px;
 	height: 469px;
 	margin-left: 100px;
-	background-color: lavender;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	position: relative;
