--- a/portfolio/src/main/webapp/resources/css/recallView.css
+++ b/portfolio/src/main/webapp/resources/css/recallView.css
@@ -4,13 +4,12 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .user_recallView-recallApplyBox{
 	width: 1200px;
 	margin-left: 100px;
-	background-color: lavender;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	position: relative;
@@ -21,14 +20,17 @@
 .user_recallView-recallApplyInfoBox{
 	width: 1000px;
 	margin-left: 100px;
-	background-color: lemonchiffon;
+	background-color: rgb(255, 220, 220);
 	padding: 10px;
 }
 .user_recallView-orderNumberBox, .user_recallView-recallStateBox{
 	width: 800px;
 	height: 50px;
-	background-color: lightcyan;
+	background-color: rgb(255, 255, 255);
 	margin-bottom: 10px;
+}
+.user_recallView-orderNumberBox div:nth-child(odd), .user_recallView-recallStateBox div:nth-child(odd){
+	background-color: rgb(255, 240, 240);
 }
 .user_recallView-orderNumberBox>*, .user_recallView-recallStateBox>*{
 	display: inline-block;
@@ -46,7 +48,7 @@
 .user_recallView-goodsBox{
 	width: 960px;
 	margin-top: 20px;
-	background-color: cyan; 
+	background-color: rgb(255, 240, 240); 
 	border-collapse: collapse;
 	border-color: black;
 }
@@ -84,13 +86,13 @@
 	width: 400px;
 	height: 50px;
 	margin-top: 20px;
-	background-color: lightcyan;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 	border: 1px solid black;
 }
 .user_recallView-selectGoodsTitle{
-	width: 200px;
-	height: 50px;
+	width: 198px;
+	height: 48px;
 	text-align: center;
 	font-size: 20px;
 	line-height: 50px;
@@ -99,12 +101,12 @@
 	float: left;
 }
 .user_recallView-selectGoods{
-	width: 188px;
-	height: 50px;
-	margin-left: 10px;
+	width: 198px;
+	height: 48px;
 	text-align: center;
 	font-size: 20px;
 	line-height: 50px;
+	background-color: rgb(255, 255, 255);
 	float: left;
 }
 .user_recallView-recallReasonTitle{
@@ -116,7 +118,7 @@
 	left: 420px;
 	border: 1px solid black;
 	box-sizing: border-box;
-	background-color: white;
+	background-color: rgb(255, 240, 240);
 	text-align: center;
 	line-height: 50px;
 }
@@ -130,7 +132,7 @@
 	left: 520px;
 	border: 1px solid black;
 	box-sizing: border-box;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	line-height: 50px
 }
 .user_recallView-board{
