--- a/portfolio/src/main/webapp/resources/css/recallViewList.css
+++ b/portfolio/src/main/webapp/resources/css/recallViewList.css
@@ -5,14 +5,13 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .admin-recallList-orderListBox{
 	width: 1200px;
 	padding: 20px 0 20px 0;
 	margin-left: 100px;
-	background-color: whitesmoke;
 	box-sizing: border-box;
 }
 .admin-recallList-orderListBox>h2{
@@ -23,19 +22,19 @@
 	width: 1000px;
 	height: 51px;
 	margin-left: 100px;
-	background-color: wheat;
+	background-color: rgb(255, 210, 210);
 	position: relative;
 	border: 1px solid black;
 	border-right: none;
 }
 .admin-recallList-orderBox{
 	border-top: none;
+	background-color: rgb(255, 230, 230);
 }
 .admin-recallList-orderTitleNumber, .admin-recallList-orderTitleInfo, .admin-recallList-orderTitleDate, .admin-recallList-orderTitleState, .admin-recallList-orderNumber, .admin-recallList-orderInfo, .admin-recallList-orderDate, .admin-recallList-orderState{
 	position: absolute;
 	width: 100px;
 	height: 49px;
-	background-color: lemonchiffon;
 	font-size: 15px;
 	line-height: 50px;
 	text-align: center;
