--- a/portfolio/src/main/webapp/resources/css/tilesSet.css
+++ b/portfolio/src/main/webapp/resources/css/tilesSet.css
@@ -12,7 +12,7 @@ li{
 	list-style: none;
 }
 a, a:hover{
-	text-decoration: none;
+	text-decoration: none !important;
 	color: black;
 }
 a:hover{
@@ -23,25 +23,21 @@ a:hover{
 	position: relative;
 	margin: 0 auto;
 	width: 1400px;
-	background-color: aqua;
 }
 .user-set-header{
 	position: fixed;
 	width: 1400px;
 	height: 150px;
-	background-color: blue;
 	z-index: 20;
 }
 .user-set-header-logo{
 	height: 100%;
 	width: 200px;
-	background-color: burlywood;
 	float: left;
 }
 .user-set-header-menuBox{
 	height: 100%;
 	width: 1200px;
-	background-color: chartreuse;
 	float: left;
 }
 .user-set-topMenuBox, .admin-set-topMenuBox{
@@ -49,7 +45,7 @@ a:hover{
 	height: 50px;
 	width: 100%;
 	padding: 10px;
-	background-color: cornflowerblue;
+	background-color: rgb(241, 146, 146);
 	box-sizing: border-box;
 }
 .user-set-topMenuBox > *{
@@ -57,7 +53,7 @@ a:hover{
 	width: 100px;
 	font-size: 15px;
 	margin:0 10px;
-	background-color: cornsilk;
+	background-color: rgb(249, 170, 170);
 	text-align: center;
 	float: left;
 	line-height: 30px;
@@ -77,13 +73,13 @@ a:hover{
 	height: 100px;
 	width: 100%;
 	padding: 20px 60px;
-	background-color: darkgreen;
+	background-color: rgb(249, 170, 170);
 	box-sizing: border-box;
 }
 .user-set-bottomMenuBox > *{
 	height: 60px;
 	width:200px;
-	background-color: darkkhaki;
+	background-color: rgb(255, 190, 190);
 	font-size: 35px;
 	line-height: 60px;
 	text-align: center;
@@ -99,7 +95,7 @@ a:hover{
 	display: none;
 	height: 60px;
 	width:200px;
-	background-color: darkkhaki;
+	background-color: rgb(255, 190, 190);
 	font-size: 35px;
 	line-height: 60px;
 	text-align: center;
@@ -135,10 +131,10 @@ a:hover{
 .user-set-banner{
 	position: relative;
 	top: 150px;
-          width: 100%;
-          height: 150px;
-          background-color: blueviolet
-      }
+	width: 100%;
+	height: 150px;
+	background-color: rgb(255, 210, 210);
+}
 .user-set-right, .admin-set-right{
 	height: 800px;
 	width: 200px;
@@ -146,13 +142,13 @@ a:hover{
 	position: fixed;
 	top: 50px;
 	right: 30px;
-	background-color: blue;
+	background-color: rgb(249, 170, 170);
 	box-sizing: border-box;
 	z-index: 25;
 }
 .user-set-orderCheck, .user-set-deliveryCheck,  .user-set-csTel{
 	height: 40px;
-	background-color: aqua;
+	background-color: rgb(255, 210, 210);
 	margin-bottom: 10px;
 	font-size: 25px;
 	text-align: center;
@@ -163,7 +159,7 @@ a:hover{
 }
 .user-set-latelyViewGoodsList{
 	height: 390px;
-	background-color: aqua;
+	background-color: rgb(255, 210, 210);
 	padding: 10px;
 	box-sizing: border-box;
 	margin-bottom: 20px;
@@ -191,7 +187,7 @@ a:hover{
 }
 .user-set-goodsList-pageBox{
 	height: 40px;
-	background-color: blueviolet;
+	background-color: rgb(241, 146, 146);
 	position: absolute;
 	top: 330px;
 	left: 13px;
@@ -213,14 +209,14 @@ a:hover{
 	height: 60px;
 	font-size: 40px;
 	text-align: center;
-	background-color: brown;
+	background-color: rgb(241, 146, 146);
 	cursor: pointer;
 }
 .user-set-footer{
 	height: 100px;
 	width: 1400px;
 	margin: 0 auto;
-	background-color: mediumorchid;
+	background-color: rgb(255, 210, 210);
 }
 .user-set-header::after, .user-set-topMenuBox::after, .user-set-searchBox::after, .user-set-searchBox::after, .user-set-goodsList-pageBox::after{
 	clear: both;
@@ -232,7 +228,7 @@ a:hover{
 	width: 120px;
 	font-size: 20px;
 	margin:0 15px;
-	background-color: cornsilk;
+	background-color: rgb(249, 170, 170);
 	text-align: center;
 	float: left;
 }
@@ -242,7 +238,7 @@ a:hover{
 .admin-set-rightInfo{
 	padding-top: 5px;
 	height: 150px;
-	background-color: aqua;
+	background-color: rgb(255, 210, 210);
 	margin-bottom: 20px;
 	font-size: 30px;
 	text-align: center;
