--- a/portfolio/src/main/webapp/resources/css/userSignUp.css
+++ b/portfolio/src/main/webapp/resources/css/userSignUp.css
@@ -4,13 +4,12 @@
 	padding: 100px 0 50px 0;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: palegoldenrod;
+	background-color: rgb(255, 240, 240);
 	box-sizing: border-box;
 }
 .user-signup-signupBox{
 	width: 1000px;
 	margin: 0 auto;
-	background-color: aqua;
 	padding: 20px 50px;
 	box-sizing: border-box;
 }
@@ -27,7 +26,7 @@
 	height: 40px;
 	font-size: 20px;
 	text-align: center;
-	background-color: lightpink;
+	background-color: rgb(255, 220, 220);
 }
 .user-signup-rowContent{
 	width: 700px;
@@ -51,8 +50,9 @@
 	height: 220px;
 	margin-bottom: 30px;
 	padding: 20px;
-	background-color: mistyrose;
+	background-color: rgb(255, 220, 220);
 	box-sizing: border-box;
+	border: 1px solid black;
 }
 .user-signup-lawInfo{
 	margin-top: 10px;
